# IC_backend

./: .gitignore  Cargo.toml  README.md  can.did  canister_ids.json  deploy-local.sh  dfx.json  local-http.sh
backend/canister_upgrader/: Cargo.toml
backend/canister_upgrader/src/: lib.rs  main.rs
backend/canisters/local_post_index/api/: Cargo.toml  can.did
backend/canisters/local_post_index/api/src/: lib.rs
backend/canisters/local_post_index/c2c_client/: Cargo.toml
backend/canisters/local_post_index/c2c_client/src/: lib.rs
backend/canisters/local_post_index/impl/: Cargo.toml
backend/canisters/local_post_index/impl/src/: guards.rs  lib.rs
backend/canisters/local_post_index/impl/src/jobs/: mod.rs  sync_events_to_post_index_canister.rs  sync_events_to_user_index_canister.rs
backend/canisters/local_post_index/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/local_post_index/impl/src/model/: comment.rs  mod.rs  post.rs  post_map.rs
backend/canisters/local_post_index/impl/src/queries/: get_comments.rs  get_like_users.rs  get_post.rs  http_request.rs  mod.rs
backend/canisters/local_post_index/impl/src/updates/: c2c_notify_events.rs  delete_comment.rs  edit_comment.rs  edit_post.rs  like_comment.rs  mod.rs  new_comment.rs  new_post.rs  unlike_comment.rs
backend/canisters/local_user_index/api/: Cargo.toml  can.did
backend/canisters/local_user_index/api/src/: lib.rs
backend/canisters/local_user_index/c2c_client/: Cargo.toml
backend/canisters/local_user_index/c2c_client/src/: lib.rs
backend/canisters/local_user_index/impl/: Cargo.toml
backend/canisters/local_user_index/impl/src/: guards.rs  lib.rs
backend/canisters/local_user_index/impl/src/jobs/: mod.rs  sync_events_to_user_index_canister.rs
backend/canisters/local_user_index/impl/src/lifecycle/: init.rs  post_upgrade.rs
backend/canisters/local_user_index/impl/src/model/: mod.rs  user.rs  user_map.rs
backend/canisters/local_user_index/impl/src/queries/: c2c_get_block_me_users.rs  c2c_get_block_users.rs  c2c_get_following_list.rs  check_password.rs  current_user.rs  follow_request.rs  get_account.rs  get_block_me_users.rs  get_block_users.rs  get_bookmarks.rs  get_followers.rs  get_following_list.rs  get_liked_posts.rs  get_profile.rs  get_user.rs  get_user_data.rs  http_request.rs  mod.rs  user.rs
backend/canisters/local_user_index/impl/src/updates/: add_block_user.rs  add_bookmark.rs  c2c_notify_events.rs  delete_account.rs  follow_user.rs  mute_user.rs  register_user.rs  register_user_with_google.rs  register_user_with_internet_identity.rs  remove_block_user.rs  remove_bookmark.rs  set_account.rs  set_account_privacy.rs  set_bio.rs  set_email.rs  set_location.rs  set_name.rs  set_photo.rs  set_preferred_pronouns.rs  set_profile.rs  set_search_by_email.rs  set_social_links.rs  set_username.rs  unfollow_user.rs  unmute_user.rs
backend/canisters/post_index/api/: Cargo.toml  can.did
backend/canisters/post_index/api/src/: lib.rs
backend/canisters/post_index/c2c_client/: Cargo.toml
backend/canisters/post_index/c2c_client/src/: lib.rs
backend/canisters/post_index/client/: Cargo.toml
backend/canisters/post_index/client/src/: lib.rs
backend/canisters/post_index/impl/: Cargo.toml
backend/canisters/post_index/impl/src/: guards.rs  lib.rs
backend/canisters/post_index/impl/src/jobs/: mod.rs  sync_events_to_local_post_index_canisters.rs  upgrade_canisters.rs
backend/canisters/post_index/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
backend/canisters/post_index/impl/src/model/: local_post_index_map.rs  mod.rs  post.rs  post_map.rs
backend/canisters/post_index/impl/src/queries/: c2c_is_nobleblocks_post.rs  get_post_info.rs  get_posts_by_category.rs  http_request.rs  mod.rs
backend/canisters/post_index/impl/src/updates/: add_local_post_index_canister.rs  c2c_notify_events.rs  mod.rs  new_post.rs  upgrade_local_post_index_canister_wasm.rs
backend/canisters/user_index/api/: Cargo.toml  can.did
backend/canisters/user_index/api/src/: lib.rs
backend/canisters/user_index/api/src/lifecycle/: init.rs
backend/canisters/user_index/api/src/queries/: c2c_get_local_user_index_canister_id.rs  c2c_is_nobleblocks_user.rs  check_email.rs  get_random_users.rs  get_user_info.rs  get_user_info_by_username.rs  get_user_infos.rs  get_users.rs  login_user.rs  mod.rs  search_user.rs
backend/canisters/user_index/api/src/updates/: add_local_user_index_canister.rs  login_user_with_google.rs  login_user_with_internet_identity.rs  mod.rs  register_user.rs  reset_password.rs  send_feedback.rs  set_password.rs  set_username.rs  verify_code.rs  verify_code_resend.rs
backend/canisters/user_index/c2c_client/: Cargo.toml
backend/canisters/user_index/c2c_client/src/: lib.rs
backend/canisters/user_index/client/: Cargo.toml
backend/canisters/user_index/client/src/: lib.rs
backend/canisters/user_index/impl/: Cargo.toml
backend/canisters/user_index/impl/src/: guards.rs  lib.rs
backend/libraries/canister_agent_utils/: Cargo.toml
backend/libraries/canister_agent_utils/src/: lib.rs
backend/libraries/canister_api_macros/: Cargo.toml
backend/libraries/canister_logger/src/: lib.rs
backend/libraries/http_request/src/: images.rs  lib.rs  router.rs
backend/libraries/types/: Cargo.toml  can.did
backend/libraries/types/src/: comment_detail.rs  http.rs  jwt.rs  lib.rs  post_detail.rs  post_summary.rs  stable_principal.rs  user_detail.rs  user_info.rs  user_summary.rs
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: consts.rs  email_event_sync_queue.rs  env.rs  field_validation.rs  lib.rs  memory.rs  truncate_string.rs  username_validation.rs
backend/libraries/utils/src/canister/: mod.rs
backend/libraries/utils/src/cycles/: mod.rs
backend/libraries/utils/src/env/: test.rs
scripts/: copy_wasm.sh  deploy-local.sh  deploy-mainnet.sh  deploy-wallet-canister.sh  deploy.sh  generate-all-canister-wasms.sh  generate-wasm.sh  upgrade-canister-local.sh  upgrade-canister-prod.sh  upgrade-canister.sh
(+100 files in other folders)
