[package]
name = "canister_upgrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_agent_utils = { path = "../libraries/canister_agent_utils" }
clap = { workspace = true, features = ["derive"] }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
tokio = { workspace = true, features = ["full"] }
types = { path = "../libraries/types" }
user_index_canister = { path = "../canisters/user_index/api" }
user_index_canister_client = { path = "../canisters/user_index/client" }
post_index_canister = { path = "../canisters/post_index/api" }
post_index_canister_client = { path = "../canisters/post_index/client" }
