[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
email_address = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
types = { path = "../types" }
serde = { workspace = true }
url = { workspace = true }
