[package]
name = "post_index_canister_impl"
authors = ["NOBLEBLOCKS"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { path = "../../../libraries/canister_state_macros" }
email_address = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
http_request = { path = "../../../libraries/http_request" }
human_readable = { path = "../../../libraries/human_readable" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-memory = { workspace = true }
ic-stable-structures = { workspace = true }
itertools = { workspace = true }
local_post_index_canister = { path = "../../local_post_index/api" }
local_post_index_canister_c2c_client = { path = "../../local_post_index/c2c_client" }
local_user_index_canister = { path = "../../local_user_index/api" }
local_user_index_canister_c2c_client = { path = "../../local_user_index/c2c_client" }
msgpack = { path = "../../../libraries/msgpack" }
post_index_canister = { path = "../api" }
rand = { workspace = true }
rust-argon2 = { workspace = true }
serde = { workspace = true }
serializer = { path = "../../../libraries/serializer" }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
url = { workspace = true }
utils = { path = "../../../libraries/utils" }
user_index_canister = { path = "../../user_index/api" }
user_index_canister_c2c_client = { path = "../../user_index/c2c_client" }
x509-parser = { workspace = true }